[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/Stakeholders_Perguntas.gd" type="Script" id=1]
[ext_resource path="res://images/buto_play_branco.png" type="Texture" id=2]
[ext_resource path="res://images/flashcard_frente.png" type="Texture" id=3]
[ext_resource path="res://images/flashcard_tras.png" type="Texture" id=4]
[ext_resource path="res://images/Medal_Platina.png" type="Texture" id=5]
[ext_resource path="res://images/Medal_Prata.png" type="Texture" id=6]
[ext_resource path="res://images/Medal_Bronze.png" type="Texture" id=7]
[ext_resource path="res://images/Medal_Ouro.png" type="Texture" id=8]
[ext_resource path="res://images/button_home.png" type="Texture" id=9]
[ext_resource path="res://Sounds/PC-LIGANDO.ogg" type="AudioStream" id=10]
[ext_resource path="res://images/tela_feedback.png" type="Texture" id=11]
[ext_resource path="res://images/BOTAO_EXIT_BRANCO.png" type="Texture" id=12]
[ext_resource path="res://images/BOTAO_EXIT_ROSA.png" type="Texture" id=13]
[ext_resource path="res://images/buto_play_rosa (1).png" type="Texture" id=14]

[node name="Node2D2" type="Node2D"]

[node name="Stakeholders_Perguntas" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="FlashCard_Tras" type="TextureRect" parent="Stakeholders_Perguntas"]
visible = false
margin_left = -1.0
margin_right = 1270.0
margin_bottom = 652.0
texture = ExtResource( 4 )
expand = true

[node name="Button_Certo" type="Button" parent="Stakeholders_Perguntas/FlashCard_Tras"]
modulate = Color( 0.152941, 1, 0, 0 )
margin_left = 637.0
margin_top = 448.0
margin_right = 775.0
margin_bottom = 611.0
text = "Acerteiiii"

[node name="Button_Errado" type="Button" parent="Stakeholders_Perguntas/FlashCard_Tras"]
modulate = Color( 0.92549, 0.0627451, 0.0627451, 0 )
margin_left = 457.0
margin_top = 449.0
margin_right = 595.0
margin_bottom = 610.0
keep_pressed_outside = true
text = "Erreiiii"

[node name="Texto_Button_Tras" type="Label" parent="Stakeholders_Perguntas/FlashCard_Tras"]
margin_left = 106.0
margin_top = 75.0
margin_right = 592.0
margin_bottom = 208.0
rect_scale = Vector2( 2.2, 2.2 )
autowrap = true

[node name="FlashCard_Frente" type="TextureRect" parent="Stakeholders_Perguntas"]
margin_left = 1.0
margin_top = 1.0
margin_right = 1267.0
margin_bottom = 649.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Button_Flashcard_Front" type="Button" parent="Stakeholders_Perguntas/FlashCard_Frente"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 82.0
margin_top = 68.0
margin_right = 1186.0
margin_bottom = 567.0

[node name="Texto_Button_Frente" type="Label" parent="Stakeholders_Perguntas/FlashCard_Frente"]
margin_left = 78.0
margin_top = 62.0
margin_right = 521.0
margin_bottom = 264.0
rect_scale = Vector2( 2.5, 2.5 )
align = 1
valign = 1
autowrap = true

[node name="Feedback" type="ColorRect" parent="Stakeholders_Perguntas"]
visible = false
margin_left = 116.0
margin_top = 75.0
margin_right = 1145.0
margin_bottom = 549.0
color = Color( 0.258824, 0.682353, 0.0862745, 1 )

[node name="Label_Feedback" type="Label" parent="Stakeholders_Perguntas/Feedback"]
margin_left = 119.0
margin_top = 3.0
margin_right = 643.0
margin_bottom = 235.0
rect_scale = Vector2( 1.5, 1.5 )
align = 1
valign = 1
autowrap = true

[node name="Button_Feedback" type="TextureButton" parent="Stakeholders_Perguntas/Feedback"]
margin_left = 463.0
margin_top = 357.0
margin_right = 562.0
margin_bottom = 448.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 14 )
expand = true

[node name="pcligandosfx" type="AudioStreamPlayer2D" parent="Stakeholders_Perguntas"]
stream = ExtResource( 10 )

[node name="Platina" type="TextureRect" parent="."]
visible = false
margin_left = 240.0
margin_top = 85.0
margin_right = 982.0
margin_bottom = 573.0
texture = ExtResource( 11 )
expand = true

[node name="Sprite" type="Sprite" parent="Platina"]
position = Vector2( 367.75, 104.156 )
scale = Vector2( 2.21, 1.92625 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="Platina"]
margin_left = 52.0
margin_top = 170.0
margin_right = 368.0
margin_bottom = 252.0
rect_scale = Vector2( 2, 2 )
text = "Parabéns!! Você alcançou a maturidade final!! A parte interessada do negócio experimentou
aprendizado validado por meio de iterações do
Loop Build-Measure-Learn que deu a eles
valor/insight do negócio."
align = 1
autowrap = true

[node name="Home_Button_Platina" type="TextureButton" parent="Platina"]
margin_left = 328.0
margin_top = 352.0
margin_right = 712.0
margin_bottom = 736.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 9 )

[node name="Ouro" type="TextureRect" parent="."]
visible = false
margin_left = 241.0
margin_top = 88.0
margin_right = 983.0
margin_bottom = 576.0
texture = ExtResource( 11 )
expand = true

[node name="Sprite" type="Sprite" parent="Ouro"]
position = Vector2( 370.5, 105.05 )
scale = Vector2( 2.14, 1.8843 )
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="Ouro"]
margin_left = 74.0
margin_top = 156.0
margin_right = 328.0
margin_bottom = 238.0
rect_scale = Vector2( 2.3, 2.3 )
text = "Você alcançou a terceira maturidade da dimensão Stakeholders!  A equipe de produto mudou o negócio e
planeja com base no que eles aprenderam."
align = 1
autowrap = true

[node name="Home_Button_Ouro" type="TextureButton" parent="Ouro"]
margin_left = 341.0
margin_top = 354.0
margin_right = 725.0
margin_bottom = 738.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 9 )

[node name="Prata" type="TextureRect" parent="."]
visible = false
margin_left = 241.0
margin_top = 88.0
margin_right = 983.0
margin_bottom = 568.0
texture = ExtResource( 11 )
expand = true

[node name="Sprite" type="Sprite" parent="Prata"]
position = Vector2( 385, 104 )
scale = Vector2( 2.15082, 1.94625 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="Prata"]
margin_left = 161.0
margin_top = 161.0
margin_right = 416.0
margin_bottom = 260.0
rect_scale = Vector2( 1.8, 1.8 )
text = "Você alcançou a maturidade dois da dimensão Stakeholders! A equipe tem frequentes
reuniões com as partes interessadas no negócio e recebe
entradas que influencia as iterações."
align = 1
autowrap = true

[node name="Home_Button_Prata" type="TextureButton" parent="Prata"]
margin_left = 341.0
margin_top = 344.0
margin_right = 725.0
margin_bottom = 728.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 9 )

[node name="Bronze" type="TextureRect" parent="."]
visible = false
margin_left = 240.0
margin_top = 72.0
margin_right = 982.0
margin_bottom = 576.0
texture = ExtResource( 11 )
expand = true

[node name="Sprite" type="Sprite" parent="Bronze"]
position = Vector2( 367, 101 )
scale = Vector2( 2.22, 1.7725 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Bronze"]
margin_left = 108.0
margin_top = 168.0
margin_right = 399.0
margin_bottom = 267.0
rect_scale = Vector2( 1.8, 1.8 )
text = "Você alcançou a primeira maturidade da simensão Stakeholders! Não existem partes interessadas nas 
reuniões de negócios e não recebem entradas que
influencia as iterações."
align = 1
autowrap = true

[node name="Home_Button_Bronze" type="TextureButton" parent="Bronze"]
margin_left = 331.0
margin_top = 366.0
margin_right = 715.0
margin_bottom = 750.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 9 )

[node name="SemMedalha" type="TextureRect" parent="."]
visible = false
margin_left = 241.0
margin_top = 88.0
margin_right = 983.0
margin_bottom = 512.0
texture = ExtResource( 11 )
expand = true

[node name="Label" type="Label" parent="SemMedalha"]
margin_left = 55.0
margin_top = 112.0
margin_right = 363.0
margin_bottom = 158.0
rect_scale = Vector2( 2, 2 )
text = "Tente novamente! Você não está pronto para a próximo nível!"
align = 1
autowrap = true

[node name="Home_Button_SemMedalha" type="TextureButton" parent="SemMedalha"]
margin_left = 327.0
margin_top = 256.0
margin_right = 711.0
margin_bottom = 640.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 9 )

[node name="Texto_Final" type="TextureRect" parent="."]
visible = false
margin_left = 1.0
margin_top = 5.0
margin_right = 1270.0
margin_bottom = 648.0
texture = ExtResource( 11 )
expand = true

[node name="Label_texto_final" type="Label" parent="Texto_Final"]
margin_left = 90.0
margin_top = 130.0
margin_right = 577.0
margin_bottom = 212.0
rect_scale = Vector2( 2.2, 2.2 )
text = "Parabéns, você concluiu o jogo Probots. E agora que você já sabe sobre o modelo de Produtos, está na hora de você ajudar a Dell a escapar dessa crise global. Boa Sorte, nós contamos com você!

Ass: Dell"
autowrap = true

[node name="Button_texto_final" type="TextureButton" parent="Texto_Final"]
margin_left = 487.0
margin_top = 397.0
margin_right = 778.0
margin_bottom = 501.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )
expand = true

[connection signal="pressed" from="Stakeholders_Perguntas/FlashCard_Tras/Button_Certo" to="Stakeholders_Perguntas" method="_on_Button_Certo_pressed"]
[connection signal="pressed" from="Stakeholders_Perguntas/FlashCard_Tras/Button_Errado" to="Stakeholders_Perguntas" method="_on_Button_Errado_pressed"]
[connection signal="pressed" from="Stakeholders_Perguntas/FlashCard_Frente/Button_Flashcard_Front" to="Stakeholders_Perguntas" method="_on_Button_Flashcard_Front_pressed"]
[connection signal="pressed" from="Stakeholders_Perguntas/Feedback/Button_Feedback" to="Stakeholders_Perguntas" method="_on_Button_Feedback_pressed"]
[connection signal="pressed" from="Platina/Home_Button_Platina" to="Stakeholders_Perguntas" method="_on_Home_Button_Platina_pressed"]
[connection signal="pressed" from="Ouro/Home_Button_Ouro" to="Stakeholders_Perguntas" method="_on_Home_Button_Ouro_pressed"]
[connection signal="pressed" from="Prata/Home_Button_Prata" to="Stakeholders_Perguntas" method="_on_Home_Button_Prata_pressed"]
[connection signal="pressed" from="Bronze/Home_Button_Bronze" to="Stakeholders_Perguntas" method="_on_Home_Button_Bronze_pressed"]
[connection signal="pressed" from="SemMedalha/Home_Button_SemMedalha" to="Stakeholders_Perguntas" method="_on_Home_Button_SemMedalha_pressed"]
[connection signal="pressed" from="Texto_Final/Button_texto_final" to="Stakeholders_Perguntas" method="_on_Button_texto_final_pressed"]
